bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-key.stderr
error: Unsupported struct attribute key: 'unknown'
 --> tests/ui/error-unsupported-struct-key.rs:4:12
  |
4 | #[frompyo3(unknown = "Resource")]
  |            ^^^^^^^
